  unchecked will move tabs to the bottom.
  
- The crosshairs are now linked between the main plot and the indicator tabs.

- Trimmed down most of the png files in the docs in an attempt to reduce the size of the source package (2+ meg). Perhaps in the future,
  we will have to split the docs off into a separate source package.
  

0.21
====

- Fixed the resize bug with the side panel causing the annoying plot resizes.

- Shortened the labels that appear in the side panel to minimize space.

- Removed the Volume label from the side panel when mouse is over the main chart. It should only appear in the VOL chart.

- Applied patch from David Crossley for the CSV plugin docs.

- Fixed a bug that would segfault if there was only 1 bar to plot.

- Applied 3 patches for PP color and several docs from David Crossley.

- Applied preliminary exhaustion bar patch from David Crossley. This is a new chart type see docs for details.

- Changed the name of the Qtstalker quotes plugin to QtstalkerFormat. This was to keep from confusing object files with the
  main program.
  
- Finally changed the compiling process to a regular './configure;make;make install' format. To do this I had to re-organize the
  entire source tree. The executable 'qtstalker' will now be put into /usr/bin. The plugins will be created in /usr/lib/qtstalker.
  The docs will go into /usr/share/doc/qtstalker. This seems to be the most popular choice (at least with Gentoo and Debian)
  
- Removed the install plugins stuff. Not really needed since all you have to do is plop the lib into the dir for it to work.

- Rewrote the paint bar functions in Plot class to accept colors from indicator plugins. Added a new function to Plugin class
  to handle color bars from indicators.

- New indicator Exhaustion Points (EP). This was originally code from Plot class that was moved into an indicator instead.
